# project-a

./: .gitmodules  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
crates/libs/lib-auth/: Cargo.toml
crates/libs/lib-core/: Cargo.toml
crates/libs/lib-core/src/_dev_utils/: dev_db.rs  mod.rs
crates/libs/lib-core/src/model/: mod.rs  taskprogress.rs  tasktime.rs  timerecord.rs
crates/libs/lib-rpc/: Cargo.toml
crates/libs/lib-rpc/src/rpcs/: mod.rs  taskprogress_rpc.rs  timerecord_rpc.rs  timerecords_rpc.rs
crates/libs/lib-temp/: Cargo.toml
crates/libs/lib-temp-ONHOLD/: Cargo.toml
crates/libs/lib-temp-ONHOLD/src/: config.rs  lib.rs
crates/libs/lib-temp-ONHOLD/src/pages/: index.rs  mod.rs  tasks.rs
crates/libs/lib-temp-ONHOLD/src/pages/components/: task.rs
crates/libs/lib-temp-ONHOLD/templates/: tasks.html
crates/libs/lib-temp-ONHOLD/templates/components/: task.html
crates/libs/lib-temp/src/: config.rs  main.rs
crates/libs/lib-temp/src/pages/: mod.rs
crates/libs/lib-temp/templates/: index.html
crates/libs/lib-temp/templates/components/: task.html
crates/libs/lib-utils/src/: lib.rs  setup.rs
crates/services/web-server/: Cargo.toml
crates/services/web-server/examples/: quick_dev.rs
crates/services/web-server/src/: main.rs
crates/services/web-server/src/web/: routes_login.rs  routes_rpc.rs
sql/dev_initial/: 01-create-schema.sql
templates/components/: task.html
web-folder/: robots.txt  sitemap.xml
