[package]
name = "lib-temp"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
# -- App Libs
lib-utils = { path = "../../libs/lib-utils"}
# -- Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"
# -- Json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
# -- Askama
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
